--- a/frontend/src/locales/zh/translation.json
+++ b/frontend/src/locales/zh/translation.json
@@ -1,33 +1,62 @@
 {
-  "welcome": "欢迎来到 Awsome Prompt 管理器",
-  "hello_carbon": "你好 Carbon",
+  "welcome": "欢迎使用 Awsome Prompt Manager",
   "login": {
     "title": "登录",
     "email": "邮箱",
     "password": "密码",
     "submit": "登录",
-    "register_link": "没有账号？点击注册",
+    "register_link": "没有账号？点击注册。",
+    "back_to_home": "返回首页",
     "error": "登录失败，请检查您的凭证。"
   },
   "register": {
     "title": "注册",
-    "id": "用户ID",
+    "id": "用户 ID",
     "email": "邮箱",
     "password": "密码",
     "display_name": "显示名称",
     "submit": "注册",
-    "login_link": "已有账号？点击登录",
+    "login_link": "已有账号？点击登录。",
     "error": "注册失败，请重试。",
-    "password_error": "密码长度必须大于8位，且至少包含大小写字母和数字中的两种。"
+    "password_error": "密码长度必须大于 8 位，且包含大写字母、小写字母或数字中的至少两种。"
   },
   "common": {
     "saving": "保存中...",
     "create": "创建",
     "cancel": "取消",
-    "submit": "提交"
+    "submit": "提交",
+    "warning": "警告",
+    "error": "错误",
+    "success": "成功",
+    "confirmation": "确认",
+    "delete": "删除",
+    "more": "更多...",
+    "save_changes": "保存更改",
+    "none": "无",
+    "loading": "加载中..."
+  },
+  "home": {
+      "error_fetch": "获取模板失败。",
+      "my_private_prompts": "我的私有提示词",
+      "public_prompts": "公开提示词",
+      "no_results": "未找到模板"
+  },
+  "dashboard": {
+    "title": "探索模板",
+    "my_templates": "我的模板",
+    "favorites": "我收藏的",
+    "my_likes": "我点赞的"
+  },
+   "sidebar": {
+      "error_fetch": "获取分类或标签失败。",
+      "no_tags": "无标签"
+  },
+  "prompt_card": {
+      "error_like": "点赞失败",
+      "error_favorite": "收藏失败"
   },
   "create_template": {
-    "title": "创建新模版",
+    "title": "创建新模板",
     "label_title": "标题",
     "ph_title": "例如：代码审查助手",
     "label_category": "分类",
@@ -41,11 +70,100 @@
     "visibility_public": "公开",
     "visibility_private": "私有",
     "label_description": "描述",
-    "ph_description": "简要描述该模版的功能",
+    "ph_description": "简要描述此模板的作用",
     "label_content": "提示词内容",
-    "ph_content": "你是一个有用的助手...",
+    "ph_content": "你是一个乐于助人的助手...",
     "error_required_fields": "请填写所有必填字段",
     "error_required_category": "请输入分类名称",
-    "error_submit": "创建模版失败"
+    "error_submit": "创建模板失败",
+    "error_required_title": "标题必填",
+    "error_required_category_select": "分类必填",
+    "error_required_content": "提示词内容必填",
+    "error_load_categories": "加载分类失败，使用默认值。"
+  },
+  "template": {
+    "language": "语言",
+    "select_language": "选择语言",
+    "zh": "中文",
+    "en": "English"
+  },
+  "template_details": {
+      "not_found": "未找到模板",
+      "error_load": "加载模板数据失败。",
+      "success_update": "模板已更新并创建了新版本！",
+      "error_update": "更新模板失败。",
+      "error_login_like": "请登录后点赞模板",
+      "error_like": "点赞失败",
+      "error_login_favorite": "请登录后收藏模板",
+      "error_favorite": "收藏失败",
+      "error_login_save": "请登录后保存提示词。",
+      "success_save_prompt": "提示词保存成功！",
+      "error_save_prompt": "创建提示词失败。",
+      "success_delete_prompt": "提示词删除成功",
+      "error_delete_prompt": "删除提示词失败",
+      "share_public": "分享 (公开)",
+      "unshare_private": "取消分享 (私有)",
+      "delete_template": "删除模板",
+      "fork_template": "Fork 模板",
+      "success_share": "模板现已公开",
+      "error_share": "分享模板失败",
+      "success_unshare": "模板现已私有",
+      "error_unshare": "取消分享模板失败",
+      "success_fork": "模板 Fork 成功！",
+      "error_fork": "Fork 模板失败",
+      "success_delete": "模板删除成功",
+      "error_delete": "删除模板失败",
+      "content_title": "模板内容",
+      "version_label": "版本：",
+      "save_new_version": "保存新版本",
+      "edit_template": "编辑模板",
+      "generate_prompt": "生成提示词",
+      "variable": "变量",
+      "enter_value": "输入值...",
+      "no_vars": "模板中未找到变量 $$ ",
+      "result_preview": "结果预览：",
+      "save_prompt": "保存提示词",
+      "how_to_use": "如何使用",
+      "instruction_1": "在模板中使用 <code>$$</code> 作为占位符。",
+      "instruction_2": "例如：<code>将$$翻译成中文。</code>",
+      "instruction_3": "生成时，每个占位符都会出现输入框。",
+      "saved_prompts": "您保存的提示词",
+      "no_saved_prompts": "暂无保存的提示词。",
+      "variables_label": "变量",
+      "load": "加载",
+      "delete_prompt_title": "删除提示词",
+      "delete_prompt_confirm": "确定要删除此提示词吗？此操作无法撤销。",
+      "delete_template_title": "删除模板",
+      "delete_template_confirm": "确定要删除整个模板吗？所有关联的提示词 和版本都将丢失。此操作无法撤销。",
+      "fork_template_title": "Fork 模板",
+      "fork_template_confirm": "确定要 Fork 此模板到您的私有库吗？将复制最新版本的内容。",
+      "fork": "Fork",
+      "like": "点赞",
+      "unlike": "取消点赞",
+      "favorite": "收藏",
+      "unfavorite": "取消收藏"
+  },
+  "profile": {
+      "error_fetch": "获取个人资料失败",
+      "success_update": "个人资料更新成功！",
+      "error_update": "更新个人资料失败。",
+      "not_set": "未设置",
+      "edit_profile": "编辑个人资料",
+      "avatar": "头像",
+      "change_avatar": "更换头像",
+      "ph_display_name": "输入您的显示名称",
+      "new_password": "新密码",
+      "ph_new_password": "留空以保持不变"
+  },
+  "card": {
+    "copy": "复制",
+    "use": "使用模板",
+    "copied": "已复制！"
+  },
+  "header": {
+    "create_template": "创建模板",
+    "login": "登录",
+    "logout": "注销",
+    "profile": "个人资料"
   }
 }
