--- a/frontend/src/locales/en/translation.json
+++ b/frontend/src/locales/en/translation.json
@@ -165,6 +165,7 @@
     "create_template": "Create Template",
     "login": "Login",
     "logout": "Logout",
-    "profile": "Profile"
+    "profile": "Profile",
+    "switchLanguage": "Switch Language"
   }
 }
