chore: add state for buttons which triggers backend api call
Signed-off-by: Sen Wang <kelvin.xupt@gmail.com>

--- a/frontend/src/locales/en/translation.json
+++ b/frontend/src/locales/en/translation.json
@@ -27,6 +27,7 @@
     "password_error": "Password must be longer than 8 characters and contain at least two types: uppercase, lowercase, or numbers."
   },
   "common": {
+    "deleting": "Deleting...",
     "saving": "Saving...",
     "create": "Create",
     "cancel": "Cancel",
