chore: show my templates
Signed-off-by: Sen Wang <kelvin.xupt@gmail.com>

--- a/frontend/src/locales/en/translation.json
+++ b/frontend/src/locales/en/translation.json
@@ -51,6 +51,7 @@
   "dashboard": {
     "title": "Explore Templates",
     "my_templates": "My Templates",
+    "all_mine": "My",
     "favorites": "Favorites",
     "my_likes": "My Likes"
   },
