feat: allow owner to update template metadata
Signed-off-by: Sen Wang <kelvin.xupt@gmail.com>

--- a/frontend/src/locales/en/translation.json
+++ b/frontend/src/locales/en/translation.json
@@ -27,6 +27,7 @@
     "password_error": "Password must be longer than 8 characters and contain at least two types: uppercase, lowercase, or numbers."
   },
   "common": {
+    "save": "Save",
     "deleting": "Deleting...",
     "saving": "Saving...",
     "create": "Create",
@@ -69,11 +70,13 @@
     "ph_title": "e.g. Code Review Assistant",
     "label_category": "Category",
     "choose_category": "Choose a category",
+    "category_placeholder": "Select Category",
     "create_new_category": "Create new category...",
     "label_new_category": "New Category Name",
     "ph_new_category": "Enter new category name",
     "label_tags": "Tags",
     "ph_tags": "e.g. python, coding, review (comma separated)",
+    "tags_placeholder": "Add tag...",
     "label_visibility": "Visibility",
     "visibility_public": "Public",
     "visibility_private": "Private",
@@ -128,12 +131,12 @@
       "generate_prompt": "Generate Prompt",
       "variable": "Variable",
       "enter_value": "Enter value...",
-      "no_vars": "No variables (79844) found in this template.",
+      "no_vars": "No variables ($$) found in this template.",
       "result_preview": "Result Preview:",
       "save_prompt": "Save Prompt",
       "how_to_use": "How to use",
-      "instruction_1": "Use <code>79844</code> as a placeholder in your template.",
-      "instruction_2": "Example: <code>Translate 79844 to Spanish.</code>",
+      "instruction_1": "Use <code>$$</code> as a placeholder in your template.",
+      "instruction_2": "Example: <code>Translate $$ to Spanish.</code>",
       "instruction_3": "When generating, inputs will appear for each placeholder.",
       "saved_prompts": "Your Saved Prompts",
       "no_saved_prompts": "No prompts saved yet.",
@@ -149,7 +152,11 @@
       "like": "Like",
       "unlike": "Unlike",
       "favorite": "Favorite",
-      "unfavorite": "Unfavorite"
+      "unfavorite": "Unfavorite",
+      "edit_metadata": "Edit Info",
+      "edit_title_desc": "Edit Title & Description",
+      "success_meta_update": "Template info updated!",
+      "error_meta_update": "Failed to update info."
   },
   "profile": {
       "error_fetch": "Failed to fetch profile",
